# RankEngine-AI

./: .gitignore  DEPLOYMENT.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: .env.example  .eslintrc.json  Dockerfile  jest.config.js  package.json
apps/api/__mocks__/: mongodb-memory-server.ts
apps/api/__tests__/: auth.test.ts  checklist.test.ts  competitorAlerts.test.ts  crawlJobs.test.ts  grade.test.ts  migration.test.ts  projects.test.ts  rankTracker.test.ts  schemaChecklist.test.ts  serp.test.ts  setup.ts  setupAfterEnv.ts
apps/api/src/: app.ts  config.ts  index.ts
apps/api/src/middleware/: errorHandler.ts  rateLimiter.ts  requestLogger.ts  requireAuth.ts  requireRole.ts
apps/api/src/models/: AuditIssue.ts  CrawlJob.ts  Notification.ts  Project.ts  RankSnapshot.ts  SerpAnalysis.ts  TrackedKeyword.ts  User.ts
apps/api/src/queues/: crawlQueue.ts  crawlQueueEvents.ts  gradingQueue.ts  redisConnection.ts
apps/api/src/routes/: auth.ts  content.ts  crawlJobs.ts  keywords.ts  notifications.ts  projects.ts
apps/api/src/services/: emailService.ts  graderService.ts  rankTrackerService.ts  serpService.ts
apps/api/src/types/: express.d.ts
apps/web/: Dockerfile  nginx.conf  package.json
apps/web/src/: App.css  App.tsx
apps/worker/: Dockerfile  README.md  config.py  crawler.py  db.py  http_utils.py  llm.py  main.py  pyproject.toml  queue_monitor.py  schema_validator.py  worker.py
apps/worker/tests/: test_crawler.py  test_llm.py  test_migration.py  test_schema.py
(+12 files in other folders)
