[tool.poetry]
name = "rankengine-worker"
version = "0.1.0"
description = "Python crawling and synthesis worker for RankEngine AI"
authors = ["RankEngine Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
bullmq = "*"
motor = "*"
playwright = "*"
beautifulsoup4 = "*"
pytest = "*"
pytest-asyncio = "*"
groq = "*"
httpx = "*"
redis = {extras = ["hiredis"], version = "*"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
